fix code overflow

--- a/src/normalize.css
+++ b/src/normalize.css
@@ -64,6 +64,7 @@ hr {
 pre {
   font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
+  overflow: auto;
 }
 
 /* Text-level semantics
